<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/characterDetailsBackground"
    tools:context=".ui.character_details.CharacterDetailsActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_below="@+id/toolbar"
        android:id="@+id/character_details_avatar_iv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/simple_avatar"/>

    <LinearLayout
        android:background="@color/characterDetailsBackground"
        android:alpha="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/character_details_avatar_iv">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/character_details_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Auqa Rick"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:alpha="1"/>
            <TextView
                android:id="@+id/character_details_id_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="id: 22 - created a year ago"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:alpha="1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_details_avatar_iv"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/characters_details_status"/>
            <TextView
                android:id="@+id/character_details_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textAlignment="textEnd"
                android:text="Alive"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/characters_details_species"/>
            <TextView
                android:id="@+id/character_details_species_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textAlignment="textEnd"
                android:text="Alien, Parasite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/characters_details_gender"/>
            <TextView
                android:id="@+id/character_details_gender_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textAlignment="textEnd"
                android:text="Male"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/characters_details_origin"/>
            <TextView
                android:id="@+id/character_details_origin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textAlignment="textEnd"
                android:text="Unity's Planet"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/characters_details_location"/>
            <TextView
                android:id="@+id/character_details_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textAlignment="textEnd"
                android:text="Citadel of Ricks"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/episodes_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:text="@string/characters_details_episodes"
        android:layout_below="@+id/details_linear_layout"/>
    <ListView
        android:id="@+id/character_details_episodes_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:layout_below="@+id/episodes_text_view"
        android:theme="@style/AppColorTheme"/>

</RelativeLayout>